# syntaxis-writer

./: README.md  pyproject.toml
post/2024/12/: paradoxo.md
