[tool.poetry]
name = "syntaxis-writer"
version = "0.1.0"
description = "Review syntaxis blog posts."
authors = ["0b10n3 <silvasmath@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
